# kater-dev-tools

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .opencode  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPLIT_DECISION.md  docker-compose.yml  pr84.diff  pyproject.toml  skills-lock.json  test_tunnel_run.py
.Jules/: palette.md
.agents/cursor/: settings.json
.agents/skills/devops-engineer/references/: docker-patterns.md  kubernetes.md
.agents/skills/parallel-disjoint-scope/: SKILL.md
.agents/skills/ui-ux-pro-max/scripts/: core.py  design_system.py  search.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  cpm-package-ci.yml  no-org-leak.yml  pr-81-review-fixes.yml  release.yml
.kater/: kater.db
docs/: HANDOFF-2026-06-13.md  HANDOFF-2026-06-25.md  PLAN-v1.0.md  cloudflare-mcp.md  cursor-setup.md  deploy-local.md  deploy-server.md  profiles.md
docs/adapters/: utrecht.md
docs/architecture/: capability-manifest-registry.md  kater-control-plane-wave.md
docs/ops/: dashboard-502-recovery-runbook.md  edge-db-upstash-refresh-runbook.md  kater-udo-full-use-runbook.md
docs/plans/: dashboard-rebuild-no-slop.md  mcp-context-hygiene-plan.md
infra/cloudflare-mcp/: README.md
infra/cloudflare-mcp/systemd/: chef-cloudflare-mcp.service  cloudflared-mcp.service
scripts/: deploy-cloudflare.sh  e2e-mcp.sh  ensure-online.sh  no_org_leak.py  provision-cloudflare-tunnel.sh  smoke.sh  sync-cursor-plugins.sh  sync_cursor_plugins.py
scripts/control-plane/: chef-kater-shadow.service  install-kater-shadow.sh  kater.env.example  rollback-kater-shadow.sh  secrets.env.example
scripts/systemd/: kater-cloudflared.service  kater.service  kater.service.example
src/kater/: ansi.py  api.py  authgate.py  autofix.py  chains.py  cli.py  deploy.py  doctor.py  envfile.py  extensions.py  gateway.py  init.py  interactive.py  mcp_server.py  oauth.py  openapi_spec.py  pr_control.py  profiles.py  registry.py  runtime.py  serve.py  settings.py  storage.py  telemetry.py  tunnel.py  websocket.py
src/kater/adapters/: external.py  utrecht.py
src/kater/api/: __init__.py  models.py  routes.py  server.py
src/kater/capabilities/: __init__.py  builtins.py  cli.py  computer.py  discovery.py  models.py  registry.py  store.py
src/kater/capabilities/schemas/: capability-manifest.schema.json
src/kater/control_plane/: __init__.py  cli.py  models.py  routing.py  state.py  store.py
src/kater/proxy/: __init__.py  aggregator.py  base.py  manager.py  models.py  router.py  sse_backend.py  stdio_backend.py  streamable_http_backend.py
src/kater/web/: __init__.py  dashboard.py  review_fixes.py
tests/: conftest.py  test_ansi.py  test_api.py  test_authgate.py  test_authgate_proxy.py  test_autofix.py  test_capabilities.py  test_capabilities_integration.py  test_capability_store_lifecycle.py  test_chains.py  test_circuit_breaker.py  test_cli.py  test_computer_acceptance_e2e.py  test_computer_acceptance_lane.py  test_computer_connector_reliability.py  test_control_plane.py  test_control_plane_integration.py  test_dashboard.py  test_deploy.py  test_doctor.py  test_envfile.py  test_external_adapter.py  test_gateway.py  test_hardening.py  test_interactive.py  test_linear_mcp.py  test_mcp_proxy_tools.py  test_mcp_server.py  test_no_org_leak.py  test_oauth.py  test_openapi_spec.py  test_pr81_review_fixes.py  test_pr_api.py  test_pr_control.py  test_profiles.py  test_profiles_extended.py  test_proxy.py  test_proxy_stdio_e2e.py  test_proxy_stdio_reap.py  test_public_deploy.py  (+11 more)
tests/acceptance/: __init__.py  computer_lane.py  kater_server.py
tests/fixtures/: private_extension.py
verification/: verify_dashboard.py
