[project]
name = "kater"
version = "0.1.0"
description = "Developer MCP gateway with profile-gated tools for code agents"
requires-python = ">=3.11,<3.15"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.scripts]
kater = "kater.cli:app"

[build-system]
requires = ["uv_build>=0.10.9,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
